@@ -1,6 +1,7 @@
 package bitedu.bipa.calendar;
 
 import java.util.Calendar;
+import java.util.Collections;
 import java.util.List;
 
 public class MyCalendar {
@@ -9,31 +10,37 @@ public class MyCalendar {
 		Calendar c = Calendar.getInstance();
 		c.set(year, month-1,1);
 		int day = c.getTime().getDay(); //1일의 요일
+		//int day = c.getFirstDayOfWeek();
 		int actualMaximum = c.getActualMaximum(Calendar.DATE); //마지막 날짜
 		
-	     List<String> days = List.of("일", "월", "화", "수", "목", "금", "토");
+		
+	     //List<String> days = List.of("일", "월", "화", "수", "목", "금", "토");
+	     List<String> days = Collections.unmodifiableList(List.of("일","월","화","수","목","금","토"));
 	     
+	     StringBuilder sb = new StringBuilder();
+	     sb.setLength(0);
 	     
 	     for(String a: days) {
-	    	 System.out.print(a+"\t");
-	    	 
+	    	 sb.append(a+"\t");
 	     }
-	     System.out.println();
+	     sb.append("\n");
 	     
 	     //첫 요일에 맞게 공백 만들기
 	     int week =0;
 	     for(int i=0;i<day;i++) {
-	    	 System.out.print("\t");
+	    	 sb.append("\t");
 	    	 week++;
 	     }
 	     
 	     //마지막날까지 출력, 개행
 	     for(int k=1;k<=actualMaximum;k++) {
-			 System.out.print(k+"\t");
+			 sb.append(k+"\t");
 			 if((week+k)%7==0) {
-				 System.out.println();
+				 sb.append("\n");
 			 }
 		 }
+	     System.out.println(sb);
 	     System.out.println();
+	     
 	}
 }
